logging/kibana/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kb-deployment
  namespace: logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:7.17.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5601
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kb-svc
  namespace: logging
  labels:
    app: kibana
spec:
  ports:
  - port: 80
    targetPort: 5601
  selector:
    app: kibana
