logging/kibana/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  labels:
    name: kibana-ingress
  namespace: logging
spec:
  rules:
  - host: elasticsearch.home.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana
            port: 
              number: 5601
